# uniguidecrew

./: README.md  hashed_pw.pkl  pyproject.toml  requirements.txt
outputs/: credits.json
src/uniguidecrew/: app.py  crew.py  decoder.py  encoder.py  hashed_pw.pkl  key_generator.py  knowledge.py  main.py  prerequisite_checker.py  test.py
src/uniguidecrew/config/: agents.yaml  agents_p.yaml  agents_s.yaml  tasks.yaml  tasks_p.yaml  tasks_s.yaml
src/uniguidecrew/outputs/: credits.json
