[project]
name = "uniguidecrew"
version = "0.1.0"
description = "UniGuideCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
uniguidecrew = "uniguidecrew.main:run"
run_crew = "uniguidecrew.main:run"
train = "uniguidecrew.main:train"
replay = "uniguidecrew.main:replay"
test = "uniguidecrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
